// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Should render with props 1`] = `
<section>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-horizontal makeStyles-root-4 MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-leftLink-5 MuiTypography-colorPrimary"
            >
              title
            </a>
          </span>
        </span>
      </span>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-rightLink-6 MuiTypography-colorPrimary"
            >
              title
            </a>
          </span>
        </span>
      </span>
    </div>
  </div>
</section>
`;

exports[`Navigation Should render without props 1`] = `
<section>
  <div
    class="MuiPaper-root MuiStepper-root MuiStepper-horizontal makeStyles-root-1 MuiPaper-elevation0"
  >
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M946.5 505L534.6 93.4a31.93 31.93 0 0 0-45.2 0L77.5 505c-12 12-18.8 28.3-18.8 45.3 0 35.3 28.7 64 64 64h43.4V908c0 17.7 14.3 32 32 32H448V716h112v224h265.9c17.7 0 32-14.3 32-32V614.3h43.4c17 0 33.3-6.7 45.3-18.8 24.9-25 24.9-65.5-.1-90.5z"
                />
              </svg>
            </a>
          </span>
        </span>
      </span>
    </div>
    <div
      class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled"
    >
      <span
        class="MuiStepConnector-line MuiStepConnector-lineHorizontal"
      />
    </div>
    <div
      class="MuiStep-root MuiStep-horizontal"
    >
      <span
        class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled"
      >
        <span
          class="MuiStepLabel-labelContainer"
        >
          <span
            class="MuiTypography-root MuiStepLabel-label MuiTypography-body2 MuiTypography-displayBlock"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M946.5 505L534.6 93.4a31.93 31.93 0 0 0-45.2 0L77.5 505c-12 12-18.8 28.3-18.8 45.3 0 35.3 28.7 64 64 64h43.4V908c0 17.7 14.3 32 32 32H448V716h112v224h265.9c17.7 0 32-14.3 32-32V614.3h43.4c17 0 33.3-6.7 45.3-18.8 24.9-25 24.9-65.5-.1-90.5z"
                />
              </svg>
            </a>
          </span>
        </span>
      </span>
    </div>
  </div>
</section>
`;
